# derma-ai-scribe

./: .replit  EXPORT_README.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  run_python.py
client/src/components/: DataExtractionStep.tsx  ExtractionStatus.tsx  Header.tsx  ModelCardGeneration.tsx  SearchStep.tsx  SourceAttribution.tsx  ValidationStep.tsx
client/src/services/: CardgenService.ts  ModelSearchService.ts  WebScrapingService.ts
client/src/utils/: downloadUtils.ts
python_app/: main.py  models.py  requirements.txt  routes.py  storage.py
python_app/services/: extraction_service.py
server/: routes.ts
server/services/: ExtractionService.ts
src/components/: ModelCardGeneration.tsx  SearchStep.tsx  StepIndicator.tsx
src/pages/: Index.tsx
src/services/: ComplianceService.ts
